<resources>
    <string name="app_name">Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="start">Start</string>
    <string name="game_is_paused">Game is Paused</string>
    <string name="current_level">Current Level</string>
    <string name="main_menu">Main Menu</string>
    <string name="resume">Resume</string>
    <string name="level_complete">Level Complete</string>
    <string name="next_level">Next Level</string>
    <string name="new_game">New Game</string>
    <string name="level_select">Level Select</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="congratulations">Congratulations</string>
    <string name="time">Time:</string>
    <string name="level">Level:</string>
    <string name="pause">Pause</string>
    <string name="level_10">Level 10</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="equals_symbol">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="mult_sign">x</string>
    <string name="div_sign">÷</string>
    <string name="factorial_sign">!</string>
    <string name="sqrt_sign">√</string>
    <string name="space_one">Space One</string>
    <string name="space_two">Space Two</string>
    <string name="digit_1">Digit 1</string>
    <string name="digit_2">Digit 2</string>
    <string name="digit_3">Digit 3</string>
    <string name="submit">Submit</string>
</resources>