<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelTenFragment">

    <TextView
        android:id="@+id/nine_oneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_margin="30dp"
        android:text="@string/_9"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/nine_twoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_margin="135dp"
        android:text="@string/_9"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/nine_threeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_margin="135dp"
        android:text="@string/_9"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/equalsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_margin="80dp"
        android:text="@string/equals_symbol"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/sixTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_margin="30dp"
        android:text="@string/_6"
        android:textSize="60sp" />
</FrameLayout>